--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@ footer img{
     height: 20px;
     width: 20px;
 }
+.site{
+    display: flex;
+    flex-direction: row;
+
+}
+.produto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    width: 150px;
+    margin: 0px;
+}
