--- a/style.css
+++ b/style.css
@@ -1,17 +1,32 @@
-footer img{
-    height: 20px;
-    width: 20px;
-}
+
 .site{
     display: flex;
     flex-direction: row;
+    align-items: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
 
 }
 .produto{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 200px;
-    width: 150px;
-    margin: 0px;
+    justify-content: center;
+    text-align: center;
+    height: 300px;
+    width: 250px;
+    border-radius: 20px;
+    border: solid;
+    border-color: black;
+    margin: 10px;
+}
+.produto h2{
+    font-size: 22px;
+}
+.produto h4{
+    font-size: 18px;
+}
+footer img{
+    height: 20px;
+    width: 20px;
 }
